--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mi Primera Página en repositorio</title>
+	<title>Mi Primera Págit commintgina en repositorio</title>
 	<link rel="stylesheet" type="text/css" href="css/styles4.css">
 </head>
 <body>
